--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -47,7 +47,26 @@
       <image class='exit' bindtap='hideIntro' src='https://gengxin.odao.com/update/h5/wangcai/index/exit.png'></image>
       <image class='intro-head' src='https://gengxin.odao.com/update/h5/wangcai/index/intro-head.png'></image>
       <view class='intro-content'>
-        <text>1.2222</text>
+        <view class='content-wrap'>
+          <text class='list'>1</text>
+          <text class='list-content'>.发起竞猜至好友、微信群、朋友圈中，好友进入旺猜进行竞猜。猜中口令领取奖励。</text>
+        </view>
+        <view class='content-wrap'>
+          <text class='list'>2</text>
+          <text class='list-content'>.系统生成0-9不重复4位数的口令，系统根据每次竞猜的数字给出几A几B的判定。</text>
+        </view>
+        <view class='content-wrap'>
+          <text class='list'>3</text>
+          <text class='list-content'>.A前面的数字代表数字对位置对的个数，B前面的数字代表数字对位置不对的个数。</text>
+        </view>
+        <view class='content-wrap'>
+          <text class='list'>4</text>
+          <text class='list-content'>.例如：口令为5234，猜题者输入5341，5的数字对位置对，3和4数字对、位置不对，1位置和数字都不对，所以判定为1A2B。</text>
+        </view>
+        <view class='content-wrap'>
+          <text class='list'>5</text>
+          <text>.未猜中的好友可获得少量奖励，最后猜中4A的好友可领取到剩余全部奖励。</text>
+        </view>   
       </view>
       <image class='intro-foot' src='https://gengxin.odao.com/update/h5/wangcai/index/intro-foot.png'></image>
     </view>
