--- a/components/pop/pop.wxml
+++ b/components/pop/pop.wxml
@@ -1,8 +1,13 @@
 <!--component/pop/pop.wxml-->
 <view class='wrap flex-column' wx:if='{{show}}'>
   <view class='main-pop'>
-    <view class='content flex-column'>
+    <view class='content'>
       <text class='{{content.length < 10 ? "long-text":"text"}}'>{{content}}</text>
+    <view class="rocket-box" wx:if="{hasJiasuka}">
+    <image class="r-icon" src='https://gengxin.odao.com/update/h5/wangcai/guess/rocket.png'></image>
+    <text class="r-str">加速卡</text>
+    <text class='r-str'>50</text>
+    </view>
     </view>
     <view class='btn-wrap flex'>
       <text class='btn' bindtap='cancle'>{{cancleBtn}}</text>
