--- a/components/pop/pop.wxss
+++ b/components/pop/pop.wxss
@@ -37,7 +37,6 @@
   width: 100%;
   height: 288rpx;
   color: #b21f2e;
-  font: bold 52rpx 'Microsoft YaHei';
   background: #fff;
 }
 .text {
@@ -51,7 +50,7 @@
   box-sizing: border-box;
   padding: 12rpx 0;
   height: 120rpx;
-  
+  font: bold 52rpx 'Microsoft YaHei';
 }
 .btn {
   flex: 1;
@@ -70,9 +69,14 @@ background-color: #c2c2c2;
 font-size: 22rpx;
 font-weight: bold;
 color: #fff;
-  transform: translate(0, 160%);
+  /* transform: translate(0, 100%); */
 }
 .r-icon {
 width: 29rpx;
 height: 33rpx;
+}
+.r-str {
+    display: inline-block;
+  height: 30rpx;
+  line-height: 30rpx;  
 }
