--- a/pages/guess/guess.wxml
+++ b/pages/guess/guess.wxml
@@ -15,7 +15,7 @@
       </view>
       <view class='rest'>
         <image class='package' src='https://gengxin.odao.com/update/h5/wangcai/guess/package-icon.png'></image>
-        <text class="rest-text">红包剩余金额{{baoInfo?baoInfo.packInfo.restMoney:0}}元</text>
+        <text class="rest-text">剩余金额{{baoInfo?baoInfo.packInfo.restMoney:0}}元</text>
       </view>
     </view>
     <view class='input-tip-wrap'>
