--- a/pages/guess/guess.wxss
+++ b/pages/guess/guess.wxss
@@ -348,10 +348,11 @@
 .kb {
   width: 100%;
   height: 0rpx;
-  position: fixed;
-  bottom: 0rpx;
+  position: absolute;
+  bottom: 0;
   left: 0;
   z-index: 3;
+  overflow: hidden;
   background: url('https://gengxin.odao.com/update/h5/wangcai/guess/keyboard.png') no-repeat;
   background-size: 100% 844rpx;
   background-position: center bottom;
