--- a/pages/tixian/tixian.wxss
+++ b/pages/tixian/tixian.wxss
@@ -2,6 +2,9 @@
 .wrap{
   background-color: #fff9e3;
   height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  position: relative;
   display: flex;
   justify-content: center;
 }
