--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,12 @@
 /**app.wxss**/
+.container-wrap {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
 .container {
   font-family: 'Microsoft YaHei';
   width: 100vw;
