--- a/pages/help/help.wxml
+++ b/pages/help/help.wxml
@@ -1,25 +1,24 @@
-<view class="box">
-<scroll-view id="scroll-box" class="flex" scroll-y>
-<view class="flex" wx:for="{{questions}}" wx:key='{{index}}'>
-<view class="item">
-<view class="item-top">
-<text class="item-text">{{item.cfg[1]}}</text>
-<view class="fcc">
-<image class="more" data-index="{{index}}" bindtap='showSolve'  src='https://gengxin.odao.com/update/h5/wangcai/help/show.png'></image>
-</view>
-</view>
-<view class="item-foot" wx:if="{{index == curIdx}}">{{item.cfg[2]}}</view>
-</view>
-</view>
-</scroll-view>
+<view class="box container-wrap">
+  <scroll-view id="scroll-box" class="flex" scroll-y>
+  <view class="flex" wx:for="{{questions}}" wx:key='{{index}}'>
+  <view class="item">
+  <view class="item-top">
+  <text class="item-text">{{item.cfg[1]}}</text>
+  <view class="fcc">
+  <image class="more" data-index="{{index}}" bindtap='showSolve'  src='https://gengxin.odao.com/update/h5/wangcai/help/show.png'></image>
+  </view>
+  </view>
+  <view class="item-foot" wx:if="{{index == curIdx}}">{{item.cfg[2]}}</view>
+  </view>
+  </view>
+  </scroll-view>
 
-<view class="fsb server-box" >
-<image class="dress-rgt" src='https://gengxin.odao.com/update/h5/wangcai/help/dress-rgt.png'></image>
-<view class="contact-box">
- <text class="{{isactive}}" ></text>
-  <button class="server-btn" open-type='contact' bindtouchstart='clickStart' bindtouchend='clickEnd' bindtap='lianxi'>客服</button>
-</view>
-<image class="dress-left" src='https://gengxin.odao.com/update/h5/wangcai/help/dress-left.png'></image>
-</view>
-
+  <view class="fsb server-box" >
+  <image class="dress-rgt" src='https://gengxin.odao.com/update/h5/wangcai/help/dress-rgt.png'></image>
+  <view class="contact-box">
+  <text class="{{isactive}}" ></text>
+    <button class="server-btn" open-type='contact' bindtouchstart='clickStart' bindtouchend='clickEnd' bindtap='lianxi'>客服</button>
+  </view>
+  <image class="dress-left" src='https://gengxin.odao.com/update/h5/wangcai/help/dress-left.png'></image>
+  </view>
 </view>
