--- a/pages/tixian/tixian.wxml
+++ b/pages/tixian/tixian.wxml
@@ -12,6 +12,10 @@
     <view class="withdraw-money">
       <input id='num' class="num" type='digit' maxlength="8" focus="{{true}}" value='{{withdraw}}' bindinput='getMoney'></input>
     </view>
+    <view class="illustrate">
+      <text class="time">1-7个工作日到账</text>
+      <text class="charge">最少提现2元，平台收取2%服务费</text>
+    </view>
     <image class="withdraw-all" src='https://gengxin.odao.com/update/h5/wangcai/withdraw/all-withdraw.png' bindtap='allRemain'></image>
     <image class="confirm" src='{{withdrawSrc}}' bindtouchstart='active' bindtouchend='cancel' bindtap='confirmWithdraw'></image>
   </view>
