--- a/app.wxss
+++ b/app.wxss
@@ -24,6 +24,12 @@
   align-items: center;
   width: 100%;
 } 
+.fs {
+  display: flex;
+  display: -webkit-flex;
+  justify-content: flex-start;
+  align-items: center;
+}
 .flex-column  {
   display: flex;
   align-items: center;
@@ -43,7 +49,6 @@
 .fcsb {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
 }
 .fcsa {
