--- a/pages/help/help.wxml
+++ b/pages/help/help.wxml
@@ -1,18 +1,17 @@
 <view class="box container-wrap">
   <scroll-view id="scroll-box" class="flex" scroll-y>
-  <view class="flex" wx:for="{{questions}}" wx:key='{{index}}'>
-  <view class="item">
-  <view class="item-top">
-  <text class="item-text">{{item.cfg[1]}}</text>
-  <view class="fcc">
-  <image class="more" data-index="{{index}}" bindtap='showSolve'  src='https://gengxin.odao.com/update/h5/wangcai/help/show.png'></image>
-  </view>
-  </view>
-  <view class="item-foot" wx:if="{{index == curIdx}}">{{item.cfg[2]}}</view>
-  </view>
-  </view>
+    <view class="flex" wx:for="{{questions}}" wx:key='{{index}}' data-index="{{index}}" bindtap='showSolve'>
+      <view class="item">
+        <view class="item-top">
+          <text class="item-text">{{item.cfg[1]}}</text>
+          <view class="fcc">
+            <image class="more"  src='https://gengxin.odao.com/update/h5/wangcai/help/show.png'></image>
+          </view>
+        </view>
+        <view class="item-foot" wx:if="{{index == curIdx}}">{{item.cfg[2]}}</view>
+      </view>
+    </view>
   </scroll-view>
-
   <view class="fsb server-box" >
   <image class="dress-rgt" src='https://gengxin.odao.com/update/h5/wangcai/help/dress-rgt.png'></image>
   <view class="contact-box">
