--- a/pages/guess/guess.wxml
+++ b/pages/guess/guess.wxml
@@ -10,12 +10,12 @@
          <text class='nickname'>{{userInfo.nickName}}</text> 
         <view class='package-num'>
           <image class='package' src='https://gengxin.odao.com/update/h5/wangcai/guess/package-icon.png'></image>
-          <text class='num'>{{baoInfo?baoInfo.packInfo.money:0}}元</text>
+          <text class='num'>{{(baoInfo && baoInfo.packInfo.money > 0)?baoInfo.packInfo.money:0}}元</text>
         </view>
       </view>
       <view class='rest'>
         <image class='package' src='https://gengxin.odao.com/update/h5/wangcai/guess/package-icon.png'></image>
-        <text class="rest-text">剩余金额{{baoInfo?baoInfo.packInfo.remain:0}}元</text>
+        <text class="rest-text">剩余金额{{(baoInfo && baoInfo.packInfo.money > 0)?baoInfo.packInfo.remain:0}}元</text>
       </view>
     </view>
     <view class='input-tip-wrap'>
