--- a/components/pop/pop.wxss
+++ b/components/pop/pop.wxss
@@ -44,9 +44,10 @@
 }
 
 .text {
-  font: bold 32rpx/48rpx 'Microsoft YaHei';
+   font: bold 32rpx/48rpx 'Microsoft YaHei';
+   text-align: left;
+   align-self: flex-start;
 }
-
 .long-text {
   font: bold 52rpx 'Microsoft YaHei';
 }
