--- a/pages/guess/guess.wxml
+++ b/pages/guess/guess.wxml
@@ -36,7 +36,7 @@
     </view>
   </view>
   <view class="bg-box">
-    <view class='game-explain flex'>
+    <view class='game-explain flex' bindtap='showPop'>
       <text class='detail'>猜中口令获取现金红包，口令为0-9不重复4位数</text>
       <text class='detail'>A表示位置正确的数字个数</text>
       <text class='detail'>B表示数字正确而位置不对数字个数</text>
