--- a/pages/rank/rank.wxss
+++ b/pages/rank/rank.wxss
@@ -134,7 +134,7 @@
 .person-avatar{
   width: 91rpx;
   height:91rpx;
-  border-radius: 50rpx;
+  border-radius: 50%;
   margin-top: 15rpx;
   margin-left: 6rpx;
   border: 4rpx solid #fff; 
@@ -192,4 +192,9 @@
 }
 .opacity{
   opacity: 0;
+}
+.touxiang{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
