--- a/pages/rank/rank.wxss
+++ b/pages/rank/rank.wxss
@@ -32,7 +32,7 @@
 .package-num {
   position: relative;
   color: #fff;
-  width: 200rpx;
+  width: 250rpx;
   height: 52rpx;
   background: rgba(81, 0, 11, 0.2);
   border-radius: 26rpx;
@@ -46,8 +46,8 @@
 }
 .num {
   display: inline-block;
-  width: 135rpx;
-  text-align: right;
+  width: 185rpx;
+  text-align: center;
   font-size: 32rpx;
   vertical-align: top;
   line-height: 52rpx; 
