--- a/pages/guess/guess.wxml
+++ b/pages/guess/guess.wxml
@@ -43,7 +43,7 @@
     </view>
     <view class="tab flex-space">
       <text class="{{doTixian}}" bindtouchstart='tixianStart' bindtouchend='tixianEnd' bindtap='tixian'></text>
-      <text class="{{doFa}}" hidden="{{!isOwner}}" bindtouchstart='faStart' bindtouchend='faEnd' bindtap='fa'></text>
+      <text class="{{doFa}}" hidden="{{isOwner}}" bindtouchstart='faStart' bindtouchend='faEnd' bindtap='fa'></text>
 
       <view class="zhuan-box">
         <text class="{{doZhuan}}">
@@ -100,5 +100,6 @@
     </view>
   </view>
   <correct id="guess" result="{{popInfo.result}}" comment="{{popInfo.comment}}" money="{{popInfo.money}}" bindhideEvent="_hide" bindactEvent="_active" bindcelEvent="_cancel"></correct>
-  <pop id="pop" content="{{tipCon}}" show='{{showTip}}' singleBtn="{{singleBtn}}" hasJiasuka="{{baoInfo.originator.items[3]}}" binddoJiasu="doClear" cancleBtn="{{cancleStr}}" sureBtn="使用加速卡"></pop> 
+  <pop id="pop" content="{{tipCon}}" show='{{showTip}}' singleBtn="{{singleBtn}}" hasJiasuka="{{baoInfo.originator.items[3]}}" binddoJiasu="doClear" cancleBtn="{{cancleStr}}" sureBtn="使用加速卡" bindcancel='toRank'></pop> 
+  <!-- <pop id="pop1" content="{{tipCon}}" show='{{showTip}}' singleBtn="{{singleBtn}}" bindcancel='toRank' ></pop> -->
 </view>
