--- a/pages/record/record.wxml
+++ b/pages/record/record.wxml
@@ -36,3 +36,4 @@
       </view> 
     </scroll-view>
   </view>
+  <tip content="{{packageTip}}" show='{{hasPackageTip}}' singleBtn='true' bindsure='userSure'></tip>
