--- a/pages/guess/guess.wxml
+++ b/pages/guess/guess.wxml
@@ -36,7 +36,7 @@
     </view>
   </view>
   <view class="bg-box">
-    <view class='game-explain flex' bindtap='showPop'>
+    <view class='game-explain flex' >
       <text class='detail'>猜中口令获得福利，口令为0-9不重复的4位数。</text>
       <text class='detail'>A前面的数字表示数字对位置对的数字个数。</text>
       <text class='detail'>B前面的数字代表数字对位置不对的数字个数。</text>
@@ -75,6 +75,9 @@
           </view>
         </view>
       </view>
+      <view class='no-record-wrap'>
+        <no-record wx:if='{{!baoInfo.records.length}}'></no-record>
+      </view>
     </scroll-view>
   </view>
   <view class="kb fcsa {{kbHeight}}">
@@ -101,5 +104,6 @@
   </view>
   <correct id="guess" result="{{popInfo.result}}" comment="{{popInfo.comment}}" money="{{popInfo.money}}" bindhideEvent="_hide" bindactEvent="_active" bindcelEvent="_cancel"></correct>
   <pop id="pop" content="{{tipCon}}" show='{{showTip}}' singleBtn="{{singleBtn}}" hasJiasuka="{{!singleBtn?baoInfo.originator.items[3]:0}}" binddoJiasu="doClear" cancleBtn="{{cancleStr}}" sureBtn="使用加速卡" bindcancel='toRank'></pop> 
-  <!-- <pop id="pop1" content="{{tipCon}}" show='{{showTip}}' singleBtn="{{singleBtn}}" bindcancel='toRank' ></pop> -->
+
+  
 </view>
