--- a/pages/guess/guess.wxml
+++ b/pages/guess/guess.wxml
@@ -23,7 +23,6 @@
       <text class="{{isSend}}" bindtouchstart='sendStart' bindtouchend='sendEnd' bindtap='send'></text>
     </view>
     <view class='time'>
-
       <view class='time-wrap flex'>
         <!-- <text class='time-content' wx:if='{{warning}}'>请输入0-9不重复4位数</text> -->
         <text class='time-content' wx:if='{{timeCd>0 }}'>下轮竞猜等待{{timeCd}}秒</text>
@@ -107,3 +106,4 @@
 
   
 </view>
+<pop content="{{packageTip}}" show='{{hasPackageTip}}' singleBtn='true'></pop>
