--- a/pages/record/record.wxml
+++ b/pages/record/record.wxml
@@ -11,8 +11,8 @@
          <view class='money-wrap'>
             <view class='num-left flex-column'>
               <image class='money-img' src='https://gengxin.odao.com/update/h5/wangcai/record/money.png'></image>
-              <text class='money-content' wx:if='{{send}}'>{{sendPackages.sum}}</text>
-              <text class='money-content' wx:if='{{receive}}'>{{receivePackages.sum}}</text>
+              <text class='money-content' wx:if='{{send}}'>{{sendPackages.sum/100}}</text>
+              <text class='money-content' wx:if='{{receive}}'>{{receivePackages.sum/100}}</text>
             </view>
             <view class='num-right flex-column'> 
               <image class='money-img' src='https://gengxin.odao.com/update/h5/wangcai/record/num.png'></image>
@@ -26,7 +26,7 @@
       <view wx:if='{{send}}'>
         <view class='one-list' bindtap='packageDetail' data-item='{{item}}'  wx:for='{{sendRecord}}' wx:key='{{index}}'>
           <text class='one-title'>{{item.title}}</text>
-          <text class='one-sum'>{{item.money}}元</text>
+          <text class='one-sum'>{{item.money/100}}元</text>
         </view>
         <view class='no-record-wrap'>
           <no-record wx:if='{{!sendRecord.length}}'></no-record>
@@ -38,7 +38,7 @@
             <image class='user-avatar' src='{{item.userInfo.avatarUrl}}'></image>
             <text class='user-nickname'>{{item.userInfo.nickName}}</text>
           </view>
-          <text class='one-sum'>{{item.guessInfo.userGetMoney}}元</text> 
+          <text class='one-sum'>{{item.guessInfo.userGetMoney/100}}元</text> 
         </view>
         <view class='no-record-wrap'>
           <no-record wx:if='{{!receiveRecord.length}}'></no-record>
