--- a/pages/guess/guess.wxml
+++ b/pages/guess/guess.wxml
@@ -101,7 +101,7 @@
       <text class="bian del" bindtap='deleteNum'></text>
     </view>
   </view>
-  <correct id="guess" result="{{popInfo.result}}" comment="{{popInfo.comment}}" money="{{popInfo.money}}" bindhideEvent="_hide" bindactEvent="_active" bindcelEvent="_cancel"></correct>
+  <correct id="guess" result="{{popInfo.result}}" comment="{{popInfo.comment}}" money="{{(popInfo.money)/100}}" bindhideEvent="_hide" bindactEvent="_active" bindcelEvent="_cancel"></correct>
   <pop id="pop" content="{{tipCon}}" show='{{showTip}}' singleBtn="{{singleBtn}}" hasJiasuka="{{!singleBtn?baoInfo.originator.items[3]:0}}" binddoJiasu="doClear" cancleBtn="{{cancleStr}}" sureBtn="使用加速卡" bindcancel='toRank'></pop> 
 
   
